--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,25 +9,25 @@ jobs:
     runs-on: ${{ matrix.platform }}
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
       with:
         toolchain: ${{ matrix.rust-toolchain }}
-    - name: Add wasm32-wasi Rust target
-      run: rustup target add wasm32-wasi --toolchain ${{ matrix.rust-toolchain }}
+    - name: Add wasm32-wasip1 Rust target
+      run: rustup target add wasm32-wasip1 --toolchain ${{ matrix.rust-toolchain }}
     - name: Cache cargo registry
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.cargo/registry
         key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
     - name: Cache cargo index
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.cargo/git
         key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
     - name: Cache cargo build
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: target
         key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
@@ -41,7 +41,7 @@ jobs:
       run: cargo install cargo-audit
       shell: bash
     - name: Check binaries and format
-      run: RUSTFLAGS="--deny warnings" cargo check --bins --target wasm32-wasi && cargo fmt -- --check
+      run: RUSTFLAGS="--deny warnings" cargo check --bins --target wasm32-wasip1 && cargo fmt -- --check
       shell: bash
     - name: clippy
       run: cargo clippy
@@ -59,14 +59,14 @@ jobs:
     environment: deploy
     needs: [test]
     steps: 
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Install Rust toolchain
       uses: actions-rs/toolchain@v1
       with:
-          toolchain: 1.54.0 # current Rust toolchain for Compute
-          target: wasm32-wasi # WebAssembly target
+          toolchain: stable # current Rust toolchain for Compute
+          target: wasm32-wasip1 # WebAssembly target
     - name: Deploy
-      uses: fastly/compute-actions@v5
+      uses: fastly/compute-actions@v11
       with:
         verbose: true
       env:
